# pv-codes

./: README.md  pyproject.toml
src/pv_codes/: __init__.py  decoder.py  encoder.py  field.py  polynomial.py
src/pv_codes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_pv.py
