[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pv-codes"
version = "0.1.0"
description = "Parvaresh–Vardy error-correcting codes with list-decoding"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "galois>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
